src/test/deca/codegen/invalid/resultats/var8-ima.res
  ** IMA ** ERREUR ** Ligne 158 : 
    WINT avec R1 indefini
